guvi_app_py.ipynb

--- a/guvi_app_py.ipynb
+++ b/guvi_app_py.ipynb
@@ -482,7 +482,7 @@
         "from huggingface_hub import login\n",
         "\n",
         "# Login using the token\n",
-        "login(token=\"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\")"
+        "login(token=\"your login token\")"
       ]
     },
     {
